[package]
name = "plexo-back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1.45.0", features = ["full"] }
base64 = "0.22.1"
openssl = "0.10.72"
tempfile = "3.20.0"
chrono = "0.4.41"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
lazy_static = "1.5.0"
futures-util = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"] }
dotenvy = "0.15.7"
rust_decimal = { version = "1.37.1", features = ["serde"] }
